# linear_solver

./: README.md
example/: CMakeLists.txt  main.cpp
include/: linear_solver.h  linear_solver_amg.h  linear_solver_block_jacobi.h  linear_solver_matrix.h  linear_solver_multithreading.h  linear_solver_solvers.h  linear_solver_solvers_MPI.h  linear_solver_utils.h  linear_solver_vector.h
